src/test/deca/context/invalid/provided/comparison_boolean_int_error.deca
// Description:
//    Une comparaison entre un boolean et un int dans une condition complexe.
//
// Résultats:
//    comparison_boolean_int_error.deca:14:17: Opérateur > non applicable to those types : boolean and int
//
// Historique:
//    créé le 19/01/2025
{
    int value = 10;
    boolean isActive = false;
    int result;

    if (isActive > value && value < 20) { 
        print("Condition vérifiée.");
    } else {
        print("Condition non vérifiée.");
    }

    result = value * 2;
    print("Résultat final : ", result);
}
